<resources>
    <string name="app_name">SofaNBA</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="try_without_an_account">TRY WITHOUT AN ACCOUNT</string>
    <string name="login_description">Discover all about NBA</string>
    <string name="image_desc_nba_logo">NBA logo</string>
    <string name="login_description_detailed">Search players and teams to get all the inside stats.</string>
    <string name="image_desc_nba_background">NBA Background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_players">All players</string>
    <string name="all_teams">All teams</string>
    <string name="favorites_fragment_title">Favorites</string>
    <string name="seasons_fragment_title">Seasons</string>
    <string name="explore">Explore</string>
    <string name="favorites">Favorites</string>
    <string name="seasons">Seasons</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="regular_season">Regular season</string>
    <string name="playoffs">Playoffs</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="filter_matches">Filter matches</string>
    <string name="unit_type">Unit type</string>
    <string name="metric_cm_kg">Metric (cm, kg)</string>
    <string name="imperial_ft_lb">Imperial (ft, lb)</string>
    <string name="match_display">Match display</string>
    <string name="home_vs_visitor">Home vs Visitor</string>
    <string name="visitor_vs_home">Visitor vs Home</string>
    <string name="more_info">More info</string>
    <string name="lorem_ipsum">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna.</string>
    <string name="about">About</string>
    <string name="clear_my_favorites_list">Clear my favorites list</string>
    <string name="date_format">Date format</string>
    <string name="sofascore_academy">SofaScore Academy</string>
    <string name="class_2022">Class 2022</string>
    <string name="app_name_label">App name</string>
</resources>