<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_surface_0"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <include
        android:id="@+id/app_bar_settings"
        layout="@layout/toolbar_default" />

    <Spinner
        android:id="@+id/date_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@id/unit_type_selecting_container"
        app:layout_constraintTop_toBottomOf="@id/app_bar_settings" />

    <LinearLayout
        android:id="@+id/unit_type_selecting_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/match_display_selecting_container"
        app:layout_constraintTop_toBottomOf="@id/date_spinner">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/unit_type"
            android:textAllCaps="true"
            android:textAppearance="@style/AssistiveNLv2Left"
            android:textColor="@color/neutrals_n_lv_2" />

        <RadioGroup
            android:id="@+id/unit_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/color_primary"
                android:text="@string/metric_cm_kg" />

            <RadioButton
                android:id="@+id/imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/color_primary"
                android:text="@string/imperial_ft_lb" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/match_display_selecting_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/about_container"
        app:layout_constraintTop_toBottomOf="@id/unit_type_selecting_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/match_display"
            android:textAllCaps="true"
            android:textAppearance="@style/AssistiveNLv2Left"
            android:textColor="@color/neutrals_n_lv_2" />

        <RadioGroup
            android:id="@+id/match_display_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/home_vs_visitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/color_primary"
                android:text="@string/home_vs_visitor" />

            <RadioButton
                android:id="@+id/visitor_vs_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/color_primary"
                android:text="@string/visitor_vs_home" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/clear_button"
        app:layout_constraintTop_toBottomOf="@id/match_display_selecting_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/about"
            android:textAppearance="@style/HeadlineMediumNLv1Left"
            android:textColor="@color/neutrals_n_lv_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/BodyMediumNLv1Left"
            android:textColor="@color/neutrals_n_lv_1" />

        <TextView
            android:id="@+id/more_info_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:padding="8dp"
            android:text="@string/more_info"
            android:textAllCaps="true"
            android:textAppearance="@style/ButtonLabelPrimaryCenter"
            android:textColor="@color/color_primary"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/clear_my_favorites_list"
        android:textColor="@color/status_error"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_container"
        app:strokeColor="@color/status_error"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>