<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_navigation">

    <TextView
        android:id="@+id/text_view"
        style="@style/HeadlineMediumNLv1Left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:text="@string/filter_matches" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_team_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:padding="16dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_seasons_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_team_filter"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textAppearance="@style/ButtonLabelPrimaryCenter"
            android:textColor="@color/color_primary"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_primary"
            android:padding="16dp"
            android:text="@string/apply"
            android:textAppearance="@style/ButtonLabelOnSurfaceCenter"
            app:cornerRadius="8dp" />

    </LinearLayout>
</RelativeLayout>